--- a/docs/source/guide/release_notes/onprem/2.4.2.md
+++ b/docs/source/guide/release_notes/onprem/2.4.2.md
@@ -1,8 +1,7 @@
 ---
 hide_sidebar: true
 ---
-## Label Studio 2.4.2
-
+## Label Studio Enterprise 2.4.2
 ### New Feature
 - Labels are not displayed inside the regions [LSDV-1142](https://labelstudio.aha.io/features/LSDV-1142)
 - Add YOLO support for PolygonLabels in export options [LSDV-2973](https://labelstudio.aha.io/features/LSDV-2973)
