--- a/docs/source/guide/release_notes/onprem/2.2.9.md
+++ b/docs/source/guide/release_notes/onprem/2.2.9.md
@@ -1,3 +1,7 @@
+---
+hide_sidebar: true
+---
+
 ## Label Studio Enterprise 2.2.9
 
 This section highlights the breaking changes, new features and enhancements, and bug fixes in Label Studio Enterprise 2.2.9. 
