--- a/docs/source/guide/release_notes/onprem/2.2.md
+++ b/docs/source/guide/release_notes/onprem/2.2.md
@@ -1,3 +1,7 @@
+---
+hide_sidebar: true
+---
+
 ## Label Studio Enterprise 2.2 Final
 
 This section highlights the new features and enhancements in Label Studio Enterprise 2.2.
