--- a/docs/source/guide/release_notes/onprem/2.4.0.md
+++ b/docs/source/guide/release_notes/onprem/2.4.0.md
@@ -1,3 +1,7 @@
+---
+hide_sidebar: true
+---
+
 ## Label Studio Enterprise 2.4.0
 This section highlights the new features and enhancements, and bug fixes in Label Studio Enterprise 2.4.
 
