--- a/docs/source/guide/release_notes/onprem/2.4.4.md
+++ b/docs/source/guide/release_notes/onprem/2.4.4.md
@@ -9,21 +9,15 @@
 - s3 custom endpoint support for persistent storage [LSDV-4677](https://labelstudio.aha.io/features/LSDV-4677)
 - Table tag ordering items alphabetically [LSDV-4613](https://labelstudio.aha.io/features/LSDV-4613)
 
-### Customer Bug Fix
+### Bug Fixes
 - Fix DM columns visual problems [LSDV-4720](https://labelstudio.aha.io/features/LSDV-4720)
 - Fix column sizes on datamanager [LSDV-4651](https://labelstudio.aha.io/features/LSDV-4651)
 - Hiding an audio region allows selection of regions below. [LSDV-4542](https://labelstudio.aha.io/features/LSDV-4542)
 - Fix Intersection over 1d timeseries spans agreement calculation for Time series [LSDV-4665](https://labelstudio.aha.io/features/LSDV-4665)
 
-### Bug Fix
 - Fixes playback micro-stutters for Video Timeline Segmentation. [LSDV-4706](https://labelstudio.aha.io/features/LSDV-4706)
 - Add error handlers like it is for AudioV1 [LSDV-1023](https://labelstudio.aha.io/features/LSDV-1023)
-- don't let ghost regions be created [LSDV-4592](https://labelstudio.aha.io/features/LSDV-4592)
+- Don't let ghost regions be created [LSDV-4592](https://labelstudio.aha.io/features/LSDV-4592)
 - AttributeError: 'GCSExportStorage' object has no attribute 'links_count' [LSDV-4547](https://labelstudio.aha.io/features/LSDV-4547)
-- [internal] Fixing the build [LSDV-4670](https://labelstudio.aha.io/features/LSDV-4670)
 - Disable file proxy for cloud using FILE_PROXY_ENABLED environment variable [LSDV-4619](https://labelstudio.aha.io/features/LSDV-4619)
 - Audio playback and playhead remain in sync. [LSDV-4572](https://labelstudio.aha.io/features/LSDV-4572)
-
-### Research
-- Export activity logs to BigQuery [LSDV-4653](https://labelstudio.aha.io/features/LSDV-4653)
-
