Update to 2.4.6-1 release notes

--- a/docs/source/guide/release_notes/onprem/2.4.6-1.md
+++ b/docs/source/guide/release_notes/onprem/2.4.6-1.md
@@ -6,5 +6,5 @@ hide_sidebar: true
 
 ## Label Studio Enterprise 2.4.6-1
 ### Bug Fix
-- Fixes an issue with using local file upload with cloud storage urls causing errors. [LSDV-5036](https://labelstudio.aha.io/features/LSDV-5036)
+- Fixes an issue with using local file upload with cloud storage urls causing errors.
 
