--- a/docs/source/guide/release_notes/onprem/2.4.7.md
+++ b/docs/source/guide/release_notes/onprem/2.4.7.md
@@ -5,18 +5,17 @@ hide_sidebar: true
 *May 18, 2023*
 
 ## Label Studio Enterprise 2.4.7
+
 ### New Feature
-- Update content when users don't have any projects created yet [LSDV-4814](https://labelstudio.aha.io/features/LSDV-4814)
+- Update content when users don't have any projects created yet
 
 ### Improvement
-- UI changes to support async export conversion. [LSDV-4822](https://labelstudio.aha.io/features/LSDV-4822)
+- UI changes to support async export conversion.
 
-### Customer Bug Fix
-- Validate email domains for trial signups only [LSDV-4922](https://labelstudio.aha.io/features/LSDV-4922)
-- Limit export number for api/project/id/exports for better performance [LSDV-4929](https://labelstudio.aha.io/features/LSDV-4929)
-- CSV and TSV exports work incorrectly with JSONs and tab/commas/others symbols in labeling [LSDV-4631](https://labelstudio.aha.io/features/LSDV-4631)
-
-### Bug Fix
-- Fixed an issue with null appearing while using video config [LSDV-4903](https://labelstudio.aha.io/features/LSDV-4903)
-- Conversion of project exports are now async [LSDV-4813](https://labelstudio.aha.io/features/LSDV-4813)
+### Bug Fixes
+- Validate email domains for trial signups only
+- Limit export number for api/project/id/exports for better performance
+- CSV and TSV exports work incorrectly with JSONs and tab/commas/others symbols in labeling
+- Fixed an issue with null appearing while using video config
+- Conversion of project exports are now async
 
